# sentinelmesh-ai

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CODE.md  Csskill.md  README.md  SENTINELMESH_README.md  __init__.py  claude.md  cybersecurityAgents.py  cybersecurityGradio.py  dummy.env  generate_graph_image.py  main.py  pyproject.toml  requirements.txt  setup_guide.md  streamlit_app.py  teamcs.env
.cursor/rules/: agentic_design_patterns.mdc
agents/: .env  alert_intake.py  auth_analyzer.py  containment.py  network_analyzer.py  soc_reporter.py  threat_intel.py
api/: app.py  gradio_app.py  streaming.py
api/routers/: threat.py
api/schemas/: threat.py
data/chroma_cybersec_db/: chroma.sqlite3
docs/: architecture.md
docs/superpowers/plans/: 2026-06-13-sentinelmesh-ai.md  2026-06-13-uploaded-evidence-analysis.md
docs/superpowers/specs/: 2026-06-13-sentinelmesh-ai-design.md  2026-06-13-uploaded-evidence-analysis-design.md
guardrails/: containment_safety.py  input_validation.py
outputs/: cybersec_report_20260613_174706.txt  cybersec_results_20260613_174706.json
sample_evidence/: api_key_compromise.json  brute_force.csv  pasted_logs.txt
sentinelmesh/: __init__.py  config.py
sentinelmesh/agents/: pipeline.py
sentinelmesh/ingestion/: __init__.py  evidence_parser.py
sentinelmesh/models/: __init__.py  events.py  response.py
sentinelmesh/simulators/: __init__.py  scenario_engine.py
sentinelmesh/tools/: __init__.py  analysis.py  llm.py
simulators/: api_access_simulator.py  auth_log_simulator.py  cloud_audit_simulator.py  endpoint_simulator.py  network_log_simulator.py  scenario_engine.py
tests/: test_analysis.py  test_ingestion.py  test_pipeline.py  test_scenarios.py
tools/: alert_tools.py  auth_tools.py  containment_tools.py  network_tools.py  reporting_tools.py  threat_intel_tools.py
utils/: generate_graph_image.py
