[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelmesh-ai"
version = "0.1.0"
description = "Cybersecurity Threat Detection Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents",
    "python-dotenv",
    "fastapi",
    "pydantic",
    "sse-starlette",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = [
    "sentinelmesh_ai",
    "sentinelmesh_ai.agents",
    "sentinelmesh_ai.api",
    "sentinelmesh_ai.guardrails",
    "sentinelmesh_ai.models",
    "sentinelmesh_ai.simulators",
    "sentinelmesh_ai.tools",
    "sentinelmesh_ai.utils",
]

[tool.setuptools.package-dir]
"sentinelmesh_ai" = "."
"sentinelmesh_ai.agents" = "agents"
"sentinelmesh_ai.api" = "api"
"sentinelmesh_ai.guardrails" = "guardrails"
"sentinelmesh_ai.models" = "models"
"sentinelmesh_ai.simulators" = "simulators"
"sentinelmesh_ai.tools" = "tools"
"sentinelmesh_ai.utils" = "utils"
