[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelmesh-ai"
version = "0.1.0"
description = "Multi-agent cybersecurity AI hackathon demo"
requires-python = ">=3.11,<3.13"

[tool.setuptools.packages.find]
include = ["sentinelmesh*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
